--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "language-botlang",
-  "version": "0.0.0",
-  "description": "Botlang support for Atom.",
+  "name": "language-bot",
+  "version": "0.1.0",
+  "description": "Adds syntax highlighting to Botlang files in Atom",
   "author": {
     "name": "Mathias Schilling",
     "email": "m@matchilling.com",
     "url": "https://www.matchilling.com"
   },
   "homepage": "https://botlang.org",
-  "licenses": [
-    {
-      "type": "GPL-3.0",
-      "url": "https://github.com/botlang/atom-language/blob/master/LICENSE"
-    }
-  ],
+  "licenses": [{
+    "type": "GPL-3.0",
+    "url": "https://github.com/botlang/atom-language-botlang/blob/master/LICENSE"
+  }],
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/botlang/atom-language.git"
+    "url": "git+ssh://git@github.com/botlang/atom-language-botlang.git"
   },
   "bugs": {
-    "url": "https://github.com/botlang/atom-language/issues"
+    "url": "https://github.com/botlang/atom-language-botlang/issues"
   },
   "engines": {
-    "atom": ">=1.0.0"
+    "atom": ">0.50.0"
   }
 }
